Completed Vue frontend

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -6,3 +6,12 @@ $body-bg: #f5f8fa;
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+
+// Scotch Tutorial Variables
+$color_1: #f14444;
+$color_2: #444;
+$color_3: #fff;
+$border_color_1: #ccc;
+$border_color_2: #fff;
+$border_color_3: #f14444;
+
